--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
   <style>
     :root {
-      --bg: #ffffff;
-      --fg: #000000;
-      --border: 2px solid #000;
-      --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
-      --sans: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      --bg: #000;
+      --fg: #fff;
+      --muted: #bdbdbd;
+      --grid-gap: 24px;
+      --max-width: 1200px;
     }
 
     * { box-sizing: border-box; }
@@ -24,149 +24,118 @@
     body {
       background: var(--bg);
       color: var(--fg);
-      font-family: var(--mono);
+      font-family: Helvetica, Arial, sans-serif;
+      -webkit-font-smoothing: antialiased;
       overflow: hidden;
     }
 
-    /* Three.js background */
+    /* Three.js background (subtle, optional) */
     #three {
       position: fixed;
       inset: 0;
       z-index: 0;
-      opacity: 0.15;
+      opacity: 0.18;
     }
 
-    /* Confetti canvas */
-    #confetti {
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      z-index: 5;
-    }
-
+    /* Swiss grid container */
     main {
       position: relative;
       z-index: 2;
-      padding: 48px 24px;
-      max-width: 820px;
+      height: 100%;
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding: 48px 32px;
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-column-gap: var(--grid-gap);
+      align-content: start;
     }
 
-    .card {
-      border: var(--border);
-      padding: 24px;
-      background: #fff;
-    }
-
-    .header {
+    header {
+      grid-column: 1 / span 12;
       display: flex;
       justify-content: space-between;
-      border-bottom: var(--border);
-      padding-bottom: 12px;
-      margin-bottom: 18px;
+      margin-bottom: 48px;
       font-size: 12px;
+      letter-spacing: 0.08em;
       text-transform: uppercase;
-      letter-spacing: 0.8px;
+      color: var(--muted);
     }
 
     h1 {
-      margin: 0 0 12px 0;
-      font-size: 32px;
-      line-height: 1.1;
+      grid-column: 1 / span 8;
+      margin: 0 0 24px 0;
+      font-size: clamp(36px, 6vw, 64px);
+      line-height: 1.05;
+      font-weight: 700;
+      letter-spacing: -0.02em;
     }
 
     p {
-      margin: 0 0 16px 0;
-      font-family: var(--sans);
-      font-size: 16px;
-      line-height: 1.45;
-      max-width: 60ch;
+      grid-column: 1 / span 6;
+      margin: 0;
+      font-size: 18px;
+      line-height: 1.5;
+      color: var(--muted);
+      max-width: 52ch;
     }
 
-    .controls {
-      border-top: var(--border);
-      padding-top: 16px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-
-    button {
-      font: inherit;
-      background: #fff;
-      color: #000;
-      border: var(--border);
-      padding: 10px 14px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #000;
-      color: #fff;
-    }
-
-    .footer {
-      border-top: var(--border);
-      margin-top: 18px;
-      padding-top: 12px;
+    footer {
+      position: absolute;
+      bottom: 32px;
+      left: 32px;
+      right: 32px;
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
       font-size: 12px;
+      letter-spacing: 0.08em;
       text-transform: uppercase;
-      letter-spacing: 0.8px;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
+      color: var(--muted);
     }
 
-    a {
-      color: inherit;
-      text-decoration: none;
-      border-bottom: 1px solid #000;
+    .sig {
+      grid-column: 1 / span 4;
     }
 
-    a:hover {
-      background: #000;
-      color: #fff;
+    .year {
+      grid-column: 9 / span 4;
+      text-align: right;
+    }
+
+    @media (max-width: 768px) {
+      h1 { grid-column: 1 / span 12; }
+      p { grid-column: 1 / span 10; }
+      .year { grid-column: 7 / span 6; }
     }
   </style>
 </head>
 
 <body>
   <canvas id="three"></canvas>
-  <canvas id="confetti"></canvas>
 
   <main>
-    <section class="card">
-      <div class="header">
-        <div>Transmission</div>
-        <div id="yearLabel">New Year</div>
-      </div>
+    <header>
+      <div>Transmission</div>
+      <div id="yearLabel">New Year</div>
+    </header>
 
-      <h1>
-        Happy New Year,<br />
-        <span id="toName">Friend</span>.
-      </h1>
+    <h1>
+      Happy New Year,<br />
+      <span id="toName">Friend</span>
+    </h1>
 
-      <p id="messageLine">
-        Wishing you a year of momentum, clarity, and good chaos.
-        This card is handmade. In code.
-      </p>
+    <p>
+      Wishing you a year of clarity, momentum, and quiet confidence.
+      This greeting exists only as code.
+    </p>
 
-      <div class="controls">
-        <button id="celebrateBtn">CONFETTI</button>
-        <button id="moreBtn">MORE</button>
-        <button id="copyBtn">COPY LINK</button>
-      </div>
-
-      <div class="footer">
-        <div>— <span id="fromName">Ingsa</span></div>
-        <div><a href="#" id="toggle3d">Toggle 3D</a></div>
-      </div>
-    </section>
+    <footer>
+      <div class="sig">— <span id="fromName">Ingsa</span></div>
+      <div class="year">01 · 01 · <span id="yearFooter"></span></div>
+    </footer>
   </main>
 
-  <!-- Confetti -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-
-  <!-- Three.js + logic -->
+  <!-- Three.js -->
   <script type="module">
     import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js";
 
@@ -174,83 +143,48 @@
     const params = new URLSearchParams(location.search);
     const to = params.get("to") || "Friend";
     const from = params.get("from") || "Ingsa";
-
     const year = new Date().getFullYear() + 1;
 
     document.getElementById("toName").textContent = to;
     document.getElementById("fromName").textContent = from;
     document.getElementById("yearLabel").textContent = year;
+    document.getElementById("yearFooter").textContent = year;
 
-    /* -------- Confetti -------- */
-    const blast = (count = 140) =>
-      confetti({
-        particleCount: count,
-        spread: 90,
-        startVelocity: 40,
-        colors: ["#000000", "#ffffff"],
-        origin: { y: 0.6 }
-      });
-
-    setTimeout(() => blast(100), 300);
-
-    document.getElementById("celebrateBtn").onclick = () => blast(160);
-    document.getElementById("moreBtn").onclick = () => blast(260);
-
-    document.getElementById("copyBtn").onclick = async () => {
-      try {
-        await navigator.clipboard.writeText(location.href);
-        blast(80);
-      } catch {
-        alert("Copy failed");
-      }
-    };
-
-    /* -------- Three.js (brutalist wireframe) -------- */
+    /* -------- Three.js (Swiss, restrained motion) -------- */
     const canvas = document.getElementById("three");
-    let enabled = true;
-
     const renderer = new THREE.WebGLRenderer({ canvas, alpha: true });
     renderer.setPixelRatio(Math.min(devicePixelRatio, 2));
 
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(50, 1, 0.1, 100);
-    camera.position.z = 6;
+    const camera = new THREE.PerspectiveCamera(45, 1, 0.1, 100);
+    camera.position.z = 7;
 
-    const geo = new THREE.IcosahedronGeometry(2.3, 2);
-    const mat = new THREE.MeshBasicMaterial({
-      color: 0x000000,
+    const geometry = new THREE.BoxGeometry(2.8, 2.8, 2.8);
+    const material = new THREE.MeshBasicMaterial({
+      color: 0xffffff,
       wireframe: true,
       transparent: true,
-      opacity: 0.6
+      opacity: 0.35
     });
 
-    const mesh = new THREE.Mesh(geo, mat);
-    scene.add(mesh);
+    const cube = new THREE.Mesh(geometry, material);
+    scene.add(cube);
 
     function resize() {
       renderer.setSize(innerWidth, innerHeight);
       camera.aspect = innerWidth / innerHeight;
       camera.updateProjectionMatrix();
     }
-
     addEventListener("resize", resize);
     resize();
 
     function animate() {
-      if (enabled) {
-        mesh.rotation.x += 0.002;
-        mesh.rotation.y += 0.003;
-        renderer.render(scene, camera);
-      }
+      cube.rotation.x += 0.0015;
+      cube.rotation.y += 0.002;
+      renderer.render(scene, camera);
       requestAnimationFrame(animate);
     }
     animate();
-
-    document.getElementById("toggle3d").onclick = (e) => {
-      e.preventDefault();
-      enabled = !enabled;
-      canvas.style.display = enabled ? "block" : "none";
-    };
   </script>
 </body>
 </html>
