--- a/index.html
+++ b/index.html
@@ -1,190 +1,328 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Happy New Year</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Happy New Year ✦</title>
 
   <style>
     :root {
       --bg: #000;
       --fg: #fff;
-      --muted: #bdbdbd;
-      --grid-gap: 24px;
-      --max-width: 1200px;
+      --muted: rgba(255,255,255,0.72);
+      --grid-gap: 20px;
+      --max: 1100px;
     }
 
     * { box-sizing: border-box; }
-
-    html, body {
-      height: 100%;
-      margin: 0;
-    }
-
+    html, body { height: 100%; }
     body {
+      margin: 0;
       background: var(--bg);
       color: var(--fg);
-      font-family: Helvetica, Arial, sans-serif;
-      -webkit-font-smoothing: antialiased;
+      font-family: Helvetica, Arial, system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
       overflow: hidden;
     }
 
-    /* Three.js background (subtle, optional) */
-    #three {
+    /* Three.js neon background */
+    #bg3d {
       position: fixed;
       inset: 0;
       z-index: 0;
-      opacity: 0.18;
     }
 
-    /* Swiss grid container */
-    main {
+    /* subtle film grain */
+    .grain {
+      position: fixed;
+      inset: 0;
+      z-index: 1;
+      pointer-events: none;
+      opacity: 0.15;
+      background-image:
+        url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='160' height='160'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='160' height='160' filter='url(%23n)' opacity='.35'/%3E%3C/svg%3E");
+      background-size: 220px 220px;
+      mix-blend-mode: overlay;
+      animation: grainMove 7s steps(8) infinite;
+    }
+    @keyframes grainMove {
+      0% { transform: translate3d(0,0,0); }
+      25% { transform: translate3d(-8px,6px,0); }
+      50% { transform: translate3d(6px,-10px,0); }
+      75% { transform: translate3d(12px,8px,0); }
+      100% { transform: translate3d(0,0,0); }
+    }
+
+    /* Confetti canvas on top */
+    #confetti {
+      position: fixed;
+      inset: 0;
+      z-index: 3;
+      pointer-events: none;
+    }
+
+    /* Swiss grid content */
+    .wrap {
       position: relative;
       z-index: 2;
       height: 100%;
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 48px 32px;
       display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-column-gap: var(--grid-gap);
-      align-content: start;
+      place-items: start;
+      padding: 28px;
+      overflow: auto;
     }
 
-    header {
-      grid-column: 1 / span 12;
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 48px;
-      font-size: 12px;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      color: var(--muted);
+    .grid {
+      width: 100%;
+      max-width: var(--max);
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap: var(--grid-gap);
+      align-content: start;
+      padding-top: 8px;
+    }
+
+    /* Thin grid lines for brutalist/swiss feel */
+    .grid::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      z-index: 2;
+      opacity: 0.06;
+      background:
+        linear-gradient(to right, rgba(255,255,255,0.7) 1px, transparent 1px),
+        linear-gradient(to bottom, rgba(255,255,255,0.7) 1px, transparent 1px);
+      background-size: 80px 80px;
+      mix-blend-mode: screen;
+    }
+
+    .left {
+      grid-column: 1 / 8;
+      min-width: 0;
+    }
+
+    .right {
+      grid-column: 8 / 13;
+      min-width: 0;
+      align-self: start;
+    }
+
+    @media (max-width: 860px) {
+      .left, .right { grid-column: 1 / 13; }
+      .wrap { padding: 18px; }
     }
 
     h1 {
-      grid-column: 1 / span 8;
-      margin: 0 0 24px 0;
-      font-size: clamp(36px, 6vw, 64px);
-      line-height: 1.05;
-      font-weight: 700;
-      letter-spacing: -0.02em;
-    }
-
-    p {
-      grid-column: 1 / span 6;
       margin: 0;
-      font-size: 18px;
-      line-height: 1.5;
-      color: var(--muted);
-      max-width: 52ch;
-    }
-
-    footer {
-      position: absolute;
-      bottom: 32px;
-      left: 32px;
-      right: 32px;
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      font-size: 12px;
-      letter-spacing: 0.08em;
+      font-weight: 700;
+      letter-spacing: -0.03em;
+      line-height: 0.95;
+      font-size: clamp(44px, 6vw, 84px);
       text-transform: uppercase;
+    }
+
+    .sub {
+      margin-top: 14px;
+      font-size: 16px;
+      line-height: 1.55;
       color: var(--muted);
+      max-width: 55ch;
     }
 
-    .sig {
-      grid-column: 1 / span 4;
+    .meta {
+      margin-top: 22px;
+      display: grid;
+      gap: 10px;
+      font-size: 14px;
+      color: rgba(255,255,255,0.78);
     }
 
-    .year {
-      grid-column: 9 / span 4;
-      text-align: right;
+    .meta .row {
+      display: flex;
+      gap: 10px;
+      align-items: baseline;
+      flex-wrap: wrap;
+    }
+    .label {
+      opacity: 0.7;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      font-size: 12px;
+    }
+    .value {
+      font-weight: 700;
+      letter-spacing: 0.02em;
     }
 
-    @media (max-width: 768px) {
-      h1 { grid-column: 1 / span 12; }
-      p { grid-column: 1 / span 10; }
-      .year { grid-column: 7 / span 6; }
+    /* Brutalist neon accent line */
+    .rule {
+      margin-top: 24px;
+      height: 2px;
+      width: min(520px, 100%);
+      background: rgba(255,255,255,0.75);
+      position: relative;
+      overflow: hidden;
     }
+    .rule::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(90deg, transparent, rgba(0,255,255,0.9), rgba(255,0,255,0.9), transparent);
+      transform: translateX(-120%);
+      animation: scan 2.4s linear infinite;
+      mix-blend-mode: screen;
+      opacity: 0.9;
+    }
+    @keyframes scan {
+      0% { transform: translateX(-120%); }
+      100% { transform: translateX(120%); }
+    }
+
+    /* Right column — “instructions” area */
+    .note {
+      margin-top: 8px;
+      font-size: 13px;
+      line-height: 1.6;
+      color: rgba(255,255,255,0.72);
+    }
+
+    .hint {
+      margin-top: 14px;
+      padding-top: 14px;
+      border-top: 1px solid rgba(255,255,255,0.18);
+      font-size: 13px;
+      line-height: 1.6;
+      color: rgba(255,255,255,0.72);
+    }
+
+    .kbd {
+      display: inline-block;
+      padding: 2px 8px;
+      border: 1px solid rgba(255,255,255,0.25);
+      border-radius: 999px;
+      font-size: 12px;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+      color: rgba(255,255,255,0.85);
+    }
+
+    /* Small corner signature */
+    .corner {
+      position: fixed;
+      bottom: 18px;
+      left: 28px;
+      z-index: 2;
+      font-size: 12px;
+      letter-spacing: 0.14em;
+      text-transform: uppercase;
+      color: rgba(255,255,255,0.55);
+      user-select: none;
+    }
+
+    /* Prevent selection glow weirdness on mobile */
+    ::selection { background: rgba(255,255,255,0.22); }
   </style>
 </head>
 
 <body>
-  <canvas id="three"></canvas>
+  <canvas id="bg3d"></canvas>
+  <div class="grain"></div>
+  <canvas id="confetti"></canvas>
 
-  <main>
-    <header>
-      <div>Transmission</div>
-      <div id="yearLabel">New Year</div>
-    </header>
+  <div class="wrap">
+    <div class="grid">
+      <section class="left">
+        <h1 id="title">Happy New Year</h1>
+        <div class="rule"></div>
 
-    <h1>
-      Happy New Year,<br />
-      <span id="toName">Friend</span>
-    </h1>
+        <p class="sub" id="message">
+          Wishing you a clean start, loud momentum, and a year that actually feels like yours.
+          Move your mouse — let it rain.
+        </p>
 
-    <p>
-      Wishing you a year of clarity, momentum, and quiet confidence.
-      This greeting exists only as code.
-    </p>
+        <div class="meta">
+          <div class="row">
+            <span class="label">To</span>
+            <span class="value" id="toName">Friend</span>
+          </div>
+          <div class="row">
+            <span class="label">From</span>
+            <span class="value" id="fromName">Ingsa</span>
+          </div>
+          <div class="row">
+            <span class="label">Year</span>
+            <span class="value" id="year"></span>
+          </div>
+        </div>
+      </section>
 
-    <footer>
-      <div class="sig">— <span id="fromName">Ingsa</span></div>
-      <div class="year">01 · 01 · <span id="yearFooter"></span></div>
-    </footer>
-  </main>
+      <aside class="right">
+        <div class="note">
+          <span class="label">Interaction</span><br/>
+          Confetti follows your cursor. Neon system runs underneath like a quiet club in the walls.
+        </div>
 
-  <!-- Three.js -->
+        <div class="hint">
+          <span class="label">Personalize</span><br/>
+          Add <span class="kbd">?to=Name</span> and optionally <span class="kbd">&from=YourName</span><br/>
+          Example: <span class="kbd">?to=Alex&from=Ingsa</span>
+        </div>
+
+        <div class="hint">
+          <span class="label">Secret</span><br/>
+          Press <span class="kbd">C</span> to trigger a confetti burst.
+        </div>
+      </aside>
+    </div>
+  </div>
+
+  <div class="corner">NEW YEAR CARD / BLACK–WHITE / NEON FIELD</div>
+
+  <!-- Three.js (CDN) -->
   <script type="module">
-    import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js";
+    import * as THREE from "https://unpkg.com/three@0.160.0/build/three.module.js";
 
-    /* -------- Personalisation -------- */
+    // -----------------------------
+    // Personalization via URL params
+    // -----------------------------
     const params = new URLSearchParams(location.search);
-    const to = params.get("to") || "Friend";
-    const from = params.get("from") || "Ingsa";
-    const year = new Date().getFullYear() + 1;
+    const to = params.get("to")?.trim();
+    const from = params.get("from")?.trim();
+    const msg = params.get("msg")?.trim();
 
-    document.getElementById("toName").textContent = to;
-    document.getElementById("fromName").textContent = from;
-    document.getElementById("yearLabel").textContent = year;
-    document.getElementById("yearFooter").textContent = year;
+    document.getElementById("year").textContent = String(new Date().getFullYear());
+    if (to) document.getElementById("toName").textContent = to;
+    if (from) document.getElementById("fromName").textContent = from;
+    if (msg) document.getElementById("message").textContent = msg;
 
-    /* -------- Three.js (Swiss, restrained motion) -------- */
-    const canvas = document.getElementById("three");
-    const renderer = new THREE.WebGLRenderer({ canvas, alpha: true });
+    // -----------------------------
+    // Neon Three.js background
+    // -----------------------------
+    const canvas = document.getElementById("bg3d");
+    const renderer = new THREE.WebGLRenderer({ canvas, antialias: true, alpha: true });
     renderer.setPixelRatio(Math.min(devicePixelRatio, 2));
 
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(45, 1, 0.1, 100);
-    camera.position.z = 7;
+    const camera = new THREE.PerspectiveCamera(55, 1, 0.1, 100);
+    camera.position.set(0, 0, 6);
 
-    const geometry = new THREE.BoxGeometry(2.8, 2.8, 2.8);
-    const material = new THREE.MeshBasicMaterial({
-      color: 0xffffff,
-      wireframe: true,
-      transparent: true,
-      opacity: 0.35
-    });
+    // Subtle fog for depth
+    scene.fog = new THREE.FogExp2(0x000000, 0.14);
 
-    const cube = new THREE.Mesh(geometry, material);
-    scene.add(cube);
+    // Additive glowing points
+    const starCount = 1600;
+    const positions = new Float32Array(starCount * 3);
+    const colors = new Float32Array(starCount * 3);
 
-    function resize() {
-      renderer.setSize(innerWidth, innerHeight);
-      camera.aspect = innerWidth / innerHeight;
-      camera.updateProjectionMatrix();
-    }
-    addEventListener("resize", resize);
-    resize();
+    // Neon palette
+    const palette = [
+      new THREE.Color("#00ffff"), // cyan
+      new THREE.Color("#ff00ff"), // magenta
+      new THREE.Color("#7cff00"), // acid green
+      new THREE.Color("#00a3ff"), // electric blue
+      new THREE.Color("#ff3b3b"), // neon red
+    ];
 
-    function animate() {
-      cube.rotation.x += 0.0015;
-      cube.rotation.y += 0.002;
-      renderer.render(scene, camera);
-      requestAnimationFrame(animate);
-    }
-    animate();
-  </script>
-</body>
-</html>
+    for (let i = 0; i < starCount; i++) {
+      const i3 = i * 3;
+      // Spread in
