--- a/index.html
+++ b/index.html
@@ -3,375 +3,259 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>Happy New Year</title>
-  <meta name="description" content="A playful New Year card with confetti + neon motion." />
+  <title>New Year Card</title>
+  <meta name="description" content="A tiny brutalist New Year greeting. Tap for confetti." />
 
   <style>
     :root{
       --bg:#000;
       --fg:#fff;
-      --muted:rgba(255,255,255,.68);
-      --grid:rgba(255,255,255,.09);
-      --grid-strong:rgba(255,255,255,.14);
-      --maxw: 980px;
+      --muted:rgba(255,255,255,.65);
+      --grid-gap: clamp(14px, 2.2vw, 22px);
     }
 
-    /* Reset */
-    *{ box-sizing:border-box; }
-    html,body{ height:100%; }
+    /* brutalist-ish system stack; falls back well on iOS/Android */
+    html,body{height:100%;}
     body{
       margin:0;
-      font-family: Helvetica, Arial, sans-serif;
-      background: var(--bg);
-      color: var(--fg);
+      background:var(--bg);
+      color:var(--fg);
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
       overflow:hidden;
       -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
+      text-rendering: geometricPrecision;
     }
 
-    /* Swiss grid background */
-    .grid{
-      position:fixed; inset:0;
-      background-image:
-        linear-gradient(var(--grid) 1px, transparent 1px),
-        linear-gradient(90deg, var(--grid) 1px, transparent 1px),
-        linear-gradient(var(--grid-strong) 1px, transparent 1px),
-        linear-gradient(90deg, var(--grid-strong) 1px, transparent 1px);
-      background-size:
-        24px 24px,
-        24px 24px,
-        120px 120px,
-        120px 120px;
-      background-position:
-        0 0,
-        0 0,
-        0 0,
-        0 0;
-      pointer-events:none;
-      opacity:.7;
-    }
-
-    /* Neon motion (lightweight CSS layers) */
-    .neon{
-      position:fixed; inset:-20%;
-      pointer-events:none;
-      filter: blur(28px) saturate(1.3);
-      opacity:.85;
-      transform: translateZ(0);
-      will-change: transform;
-    }
-    .neon::before,
-    .neon::after{
-      content:"";
-      position:absolute; inset:0;
-      background:
-        radial-gradient( circle at 20% 30%, rgba(0,255,255,.45), transparent 40%),
-        radial-gradient( circle at 75% 25%, rgba(255,0,200,.35), transparent 45%),
-        radial-gradient( circle at 65% 75%, rgba(0,255,120,.28), transparent 45%),
-        radial-gradient( circle at 25% 80%, rgba(255,180,0,.24), transparent 48%);
-      mix-blend-mode: screen;
-      transform: translate3d(0,0,0);
-      animation: drift1 12s linear infinite;
-    }
-    .neon::after{
-      opacity:.7;
-      animation: drift2 16s linear infinite reverse;
-    }
-    @keyframes drift1{
-      0%   { transform: translate3d(-2%, -1%, 0) scale(1.05) rotate(0deg); }
-      50%  { transform: translate3d( 2%,  2%, 0) scale(1.08) rotate(8deg); }
-      100% { transform: translate3d(-2%, -1%, 0) scale(1.05) rotate(0deg); }
-    }
-    @keyframes drift2{
-      0%   { transform: translate3d( 2%,  1%, 0) scale(1.02) rotate(0deg); }
-      50%  { transform: translate3d(-2%, -2%, 0) scale(1.06) rotate(-10deg); }
-      100% { transform: translate3d( 2%,  1%, 0) scale(1.02) rotate(0deg); }
-    }
-
-    /* Subtle vignette to keep text readable */
-    .vignette{
-      position:fixed; inset:0;
-      pointer-events:none;
-      background:
-        radial-gradient(circle at 50% 40%, rgba(0,0,0,0) 0%, rgba(0,0,0,.35) 55%, rgba(0,0,0,.7) 100%);
-    }
-
-    /* Canvas on top */
-    canvas#confetti{
-      position:fixed; inset:0;
-      width:100%; height:100%;
-      pointer-events:none; /* interaction captured by document */
-    }
-
-    /* Content using Swiss grid layout */
+    /* Swiss-ish grid layout (simple + responsive) */
     .wrap{
       position:relative;
       height:100%;
-      display:flex;
-      align-items:flex-start;
-      justify-content:center;
-      padding: clamp(18px, 4vw, 56px);
-      padding-top: clamp(22px, 6vh, 72px);
-    }
-
-    .content{
-      width:min(var(--maxw), 100%);
+      padding: max(18px, env(safe-area-inset-top)) max(18px, env(safe-area-inset-right))
+               max(18px, env(safe-area-inset-bottom)) max(18px, env(safe-area-inset-left));
       display:grid;
       grid-template-columns: repeat(12, 1fr);
-      gap: 16px;
+      gap: var(--grid-gap);
+      align-items:start;
     }
 
-    .headline{
+    header{
       grid-column: 1 / -1;
-      letter-spacing:-0.03em;
-      line-height:1.02;
-      font-size: clamp(44px, 8vw, 84px);
-      margin:0 0 10px 0;
+      display:flex;
+      flex-direction:column;
+      gap: 10px;
     }
 
-    .sub{
-      grid-column: 1 / span 8;
-      font-size: clamp(14px, 2.4vw, 18px);
-      line-height:1.55;
+    .kicker{
+      letter-spacing:.08em;
+      text-transform:uppercase;
+      font-size: 12px;
       color: var(--muted);
+    }
+
+    h1{
       margin:0;
+      font-size: clamp(34px, 6vw, 64px);
+      line-height: .95;
+      letter-spacing: -0.02em;
+      font-weight: 700;
+    }
+
+    .msg{
+      grid-column: 1 / -1;
+      max-width: 48ch;
+      font-size: clamp(16px, 2.2vw, 20px);
+      line-height: 1.35;
+      color: rgba(255,255,255,.92);
     }
 
     .meta{
-      grid-column: 1 / span 6;
-      margin-top: 22px;
+      grid-column: 1 / -1;
       display:flex;
-      gap: 12px;
       flex-wrap:wrap;
-      align-items:center;
+      gap: 10px 18px;
+      margin-top: 6px;
       color: var(--muted);
       font-size: 13px;
-      text-transform: uppercase;
-      letter-spacing: .12em;
     }
 
-    .pill{
-      display:inline-flex;
-      align-items:center;
-      gap:8px;
-      padding: 10px 12px;
-      border:1px solid rgba(255,255,255,.16);
-      background: rgba(0,0,0,.35);
-      backdrop-filter: blur(6px);
-    }
-
-    /* Instruction line for mobile */
-    .hint{
-      grid-column: 1 / span 7;
-      margin-top: 14px;
-      font-size: 13px;
-      color: rgba(255,255,255,.55);
-      letter-spacing: .02em;
-    }
-
-    /* Small footer */
-    .footer{
-      position:fixed;
-      left: clamp(18px, 4vw, 56px);
-      bottom: clamp(16px, 3vw, 40px);
-      color: rgba(255,255,255,.35);
+    .tap{
+      position:absolute;
+      left: 18px;
+      bottom: 18px;
+      right: 18px;
+      color: rgba(255,255,255,.65);
       font-size: 12px;
-      letter-spacing:.02em;
-      user-select:none;
+      letter-spacing:.06em;
+      text-transform:uppercase;
+      pointer-events:none;
     }
 
-    /* Reduce motion preference */
-    @media (prefers-reduced-motion: reduce){
-      .neon::before,.neon::after{ animation:none; }
+    /* Confetti canvas always on top, but not blocking taps */
+    canvas{
+      position:absolute;
+      inset:0;
+      width:100%;
+      height:100%;
+      pointer-events:none;
+    }
+
+    /* Subtle brutalist divider line */
+    .line{
+      width: 100%;
+      height:1px;
+      background: rgba(255,255,255,.18);
+      margin-top: 4px;
     }
   </style>
 </head>
 
 <body>
-  <div class="neon" aria-hidden="true"></div>
-  <div class="grid" aria-hidden="true"></div>
-  <div class="vignette" aria-hidden="true"></div>
+  <div class="wrap" id="wrap">
+    <canvas id="confetti"></canvas>
 
-  <canvas id="confetti"></canvas>
+    <header>
+      <div class="kicker" id="kicker">NEW YEAR MESSAGE</div>
+      <h1 id="title">Happy New Year.</h1>
+      <div class="line"></div>
+    </header>
 
-  <main class="wrap">
-    <section class="content">
-      <h1 class="headline" id="title">Happy New Year, friend.</h1>
+    <div class="msg" id="message">
+      Wishing you a clean start and loud momentum. <br/>
+      Tap anywhere for confetti.
+    </div>
 
-      <p class="sub" id="message">
-        Wishing you a year of momentum, good health, and clean new beginnings.
-        Here’s a small burst of joy from my corner of the world.
-      </p>
+    <div class="meta">
+      <div id="toLine">To: Friend</div>
+      <div id="fromLine">From: Ingsa</div>
+      <div id="yearLine">Year: 2026</div>
+    </div>
 
-      <div class="meta" aria-label="Details">
-        <div class="pill"><span>2026</span><span style="opacity:.6">/</span><span id="toName">for you</span></div>
-        <div class="pill"><span id="fromName">— Ingsa</span></div>
-      </div>
-
-      <div class="hint" id="hint">
-        Move your cursor to spray confetti. On phone: tap/drag anywhere.
-      </div>
-    </section>
-  </main>
-
-  <div class="footer">Built with love + a little chaos.</div>
+    <div class="tap">Tap / Click anywhere → confetti</div>
+  </div>
 
   <script>
-    // ----------------------------
-    // Personalization via URL params:
-    // ?to=Alex&from=Ingsa&msg=Your%20message%20here
-    // ----------------------------
+    /**
+     * Personalization via URL parameters:
+     *   ?to=Annie&from=Ingsa&msg=Big%20energy%20in%202026!&year=2026
+     */
     const params = new URLSearchParams(location.search);
-    const to = params.get("to");
-    const from = params.get("from");
-    const msg = params.get("msg");
-    const year = params.get("year");
+    const to = params.get("to") || "Friend";
+    const from = params.get("from") || "Ingsa";
+    const msg = params.get("msg") || "Wishing you a clean start and loud momentum.\nTap anywhere for confetti.";
+    const year = params.get("year") || "2026";
+    const title = params.get("title") || "Happy New Year.";
 
-    const toNameEl = document.getElementById("toName");
-    const fromNameEl = document.getElementById("fromName");
-    const msgEl = document.getElementById("message");
-    const titleEl = document.getElementById("title");
+    document.getElementById("title").textContent = title;
+    document.getElementById("message").innerHTML = msg.replace(/\n/g, "<br/>");
+    document.getElementById("toLine").textContent = `To: ${to}`;
+    document.getElementById("fromLine").textContent = `From: ${from}`;
+    document.getElementById("yearLine").textContent = `Year: ${year}`;
 
-    if (to && to.trim()) {
-      toNameEl.textContent = to.trim();
-      titleEl.textContent = `Happy New Year, ${to.trim()}.`;
-    }
-    if (from && from.trim()) fromNameEl.textContent = `— ${from.trim()}`;
-    if (msg && msg.trim()) msgEl.textContent = msg.trim();
-    if (year && year.trim()) {
-      // If you pass ?year=2026 it replaces "2026" in the pill (kept simple)
-      document.querySelector(".meta .pill span").textContent = year.trim();
-    }
-
-    // ----------------------------
-    // Lightweight confetti
-    // - Uses a single canvas
-    // - Caps particle count
-    // - Optimized drawing
-    // - Works with mouse + touch
-    // ----------------------------
+    // Ultra-light confetti (no libraries)
     const canvas = document.getElementById("confetti");
     const ctx = canvas.getContext("2d", { alpha: true });
 
-    function resize() {
-      const dpr = Math.max(1, Math.min(2, window.devicePixelRatio || 1)); // cap DPR
+    function resize(){
+      const dpr = Math.max(1, Math.min(2, window.devicePixelRatio || 1));
       canvas.width = Math.floor(innerWidth * dpr);
       canvas.height = Math.floor(innerHeight * dpr);
-      canvas.style.width = innerWidth + "px";
-      canvas.style.height = innerHeight + "px";
-      ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
+      ctx.setTransform(dpr,0,0,dpr,0,0);
     }
     addEventListener("resize", resize, { passive: true });
     resize();
 
-    // Neon-ish palette (confetti only; background stays B/W grid + neon glow)
-    const COLORS = ["#00F5FF", "#FF2BD6", "#7CFF00", "#FFD400", "#A56CFF", "#FFFFFF"];
+    const confettiPieces = [];
+    let animating = false;
 
-    const particles = [];
-    const MAX_PARTICLES = 650;      // keep safe for laptops
-    const EMIT_PER_EVENT = 12;      // confetti per move/tap
-    const GRAVITY = 720;            // px/s^2
-    const DRAG = 0.985;
+    // keep grayscale brutalist: white/gray only
+    const COLORS = ["#fff", "rgba(255,255,255,.85)", "rgba(255,255,255,.65)"];
 
-    function rand(min, max){ return Math.random() * (max - min) + min; }
-
-    function emit(x, y, amount){
-      for (let i = 0; i < amount; i++){
-        if (particles.length >= MAX_PARTICLES) particles.shift();
-
-        const angle = rand(-Math.PI, 0);        // spray upward
-        const speed = rand(220, 720);
-        const vx = Math.cos(angle) * speed + rand(-120, 120);
-        const vy = Math.sin(angle) * speed - rand(80, 160);
-
-        particles.push({
+    function burst(x, y){
+      const count = 90; // light enough for phones
+      for(let i=0;i<count;i++){
+        const angle = Math.random() * Math.PI * 2;
+        const speed = 2 + Math.random() * 6;
+        confettiPieces.push({
           x, y,
-          vx, vy,
-          w: rand(3, 7),
-          h: rand(5, 11),
-          r: rand(0, Math.PI),
-          vr: rand(-6, 6),
-          life: rand(0.75, 1.35),
-          age: 0,
-          color: COLORS[(Math.random() * COLORS.length) | 0],
+          vx: Math.cos(angle) * speed,
+          vy: Math.sin(angle) * speed - (2 + Math.random()*3),
+          g: 0.16 + Math.random()*0.12,
+          r: (Math.random()*6) + 2,     // size
+          h: (Math.random()*10) + 6,    // size
+          rot: Math.random() * Math.PI,
+          vr: (Math.random() - 0.5) * 0.25,
+          life: 0,
+          ttl: 90 + Math.random()*40,
+          color: COLORS[(Math.random()*COLORS.length)|0],
+          shape: Math.random() < 0.25 ? "line" : "rect"
         });
       }
+      if(!animating){
+        animating = true;
+        requestAnimationFrame(tick);
+      }
+      // tiny haptic on supported phones
+      if (navigator.vibrate) navigator.vibrate(10);
     }
 
-    let lastEmit = 0;
-    function throttledEmit(x, y){
-      const now = performance.now();
-      if (now - lastEmit < 16) return; // ~60fps throttle
-      lastEmit = now;
-      emit(x, y, EMIT_PER_EVENT);
-    }
+    function tick(){
+      ctx.clearRect(0,0,innerWidth,innerHeight);
 
-    // Mouse
-    addEventListener("mousemove", (e) => {
-      throttledEmit(e.clientX, e.clientY);
-    }, { passive: true });
+      for(let i=confettiPieces.length-1; i>=0; i--){
+        const p = confettiPieces[i];
+        p.life++;
+        p.vy += p.g;
+        p.x += p.vx;
+        p.y += p.vy;
+        p.rot += p.vr;
 
-    // Touch (mobile): tap + drag
-    addEventListener("touchstart", (e) => {
-      const t = e.touches && e.touches[0];
-      if (!t) return;
-      throttledEmit(t.clientX, t.clientY);
-    }, { passive: true });
-
-    addEventListener("touchmove", (e) => {
-      const t = e.touches && e.touches[0];
-      if (!t) return;
-      throttledEmit(t.clientX, t.clientY);
-    }, { passive: true });
-
-    // Optional: quick burst on click/tap
-    addEventListener("click", (e) => emit(e.clientX, e.clientY, 26), { passive: true });
-
-    let lastTime = performance.now();
-    function tick(t){
-      const dt = Math.min(0.033, (t - lastTime) / 1000);
-      lastTime = t;
-
-      ctx.clearRect(0, 0, innerWidth, innerHeight);
-
-      for (let i = particles.length - 1; i >= 0; i--){
-        const p = particles[i];
-        p.age += dt;
-        if (p.age >= p.life){
-          particles.splice(i, 1);
-          continue;
-        }
-
-        // physics
-        p.vx *= DRAG;
-        p.vy = p.vy * DRAG + GRAVITY * dt;
-
-        p.x += p.vx * dt;
-        p.y += p.vy * dt;
-        p.r += p.vr * dt;
-
-        // fade out near the end
-        const fade = 1 - (p.age / p.life);
-        const alpha = Math.max(0, Math.min(1, fade));
+        const alpha = Math.max(0, 1 - (p.life / p.ttl));
+        ctx.globalAlpha = alpha;
+        ctx.strokeStyle = p.color;
+        ctx.fillStyle = p.color;
 
         ctx.save();
-        ctx.globalAlpha = alpha;
         ctx.translate(p.x, p.y);
-        ctx.rotate(p.r);
+        ctx.rotate(p.rot);
 
-        // draw as small rectangle confetti
-        ctx.fillStyle = p.color;
-        ctx.fillRect(-p.w / 2, -p.h / 2, p.w, p.h);
-
+        if (p.shape === "line"){
+          ctx.lineWidth = 2;
+          ctx.beginPath();
+          ctx.moveTo(-p.h, 0);
+          ctx.lineTo(p.h, 0);
+          ctx.stroke();
+        } else {
+          ctx.fillRect(-p.r, -p.h/2, p.r*2, p.h);
+        }
         ctx.restore();
+
+        // remove if out of life or far off screen
+        if(p.life > p.ttl || p.y > innerHeight + 60 || p.x < -60 || p.x > innerWidth + 60){
+          confettiPieces.splice(i,1);
+        }
       }
 
-      requestAnimationFrame(tick);
-    }
-    requestAnimationFrame(tick);
+      ctx.globalAlpha = 1;
 
-    // Small performance hint for slower devices:
-    // If you want it even lighter, reduce MAX_PARTICLES to ~350 and EMIT_PER_EVENT to ~8.
+      if(confettiPieces.length){
+        requestAnimationFrame(tick);
+      } else {
+        animating = false;
+      }
+    }
+
+    // Mobile-first interaction: tap anywhere
+    // Use pointer events for both mouse + touch, passive for performance.
+    const wrap = document.getElementById("wrap");
+
+    wrap.addEventListener("pointerdown", (e) => {
+      // prevent double-tap zoom on iOS Safari-ish behaviour
+      // (we keep it minimal; no preventDefault needed for pointerdown)
+      burst(e.clientX, e.clientY);
+    }, { passive: true });
+
+    // Optional: auto-burst once on load (tiny)
+    setTimeout(() => burst(Math.min(120, innerWidth*0.25), Math.min(160, innerHeight*0.3)), 250);
   </script>
 </body>
 </html>
