--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <canvas id="confetti"></canvas>
 
     <header>
-      <div class="kicker" id="kicker">NEW YEAR MESSAGE</div>
+      <div class="kicker" id="kicker"></div>
       <h1 id="title">Happy New Year.</h1>
       <div class="line"></div>
     </header>
@@ -124,11 +124,11 @@
       Tap anywhere for confetti.
     </div>
 
-    <div class="meta">
+    <!-- <div class="meta">
       <div id="toLine">To: Friend</div>
       <div id="fromLine">From: Ingsa</div>
       <div id="yearLine">Year: 2026</div>
-    </div>
+    </div> -->
 
     <div class="tap">Tap / Click anywhere → confetti</div>
   </div>
